Implement go to definition/find references for statement labels (#596)